--- a/NewMeca.css
+++ b/NewMeca.css
@@ -101,14 +101,11 @@
 
 .mybutton{
 	height:75px;
-	.width:220px;
 	font-size:20px;
 	padding:4px;
 }
 
 .mybuttonTiny{
-	.height:20px;
-	.width:220px;
 	font-size:10px;
 	padding:1px;
 	}
@@ -147,13 +144,69 @@
 	top:310px;
 	right:10px;
 }
-	
 .VideoPartDiv #cadre_v{
 	width: -moz-calc(100% - 260px);
 	width: -webkit-calc(100% - 260px);
 	width: -o-calc(100% - 260px);
 	width: calc(100% - 260px);
 }
+#v0{
+	width:100%; 
+	object-fit: contain;  
+	height: 100%;
+	margin:0px;
+	left:0px;
+	top:0px;
+	padding:0px;
+	max-height:90vh;
+	max-width:90vw;
+}
+
+@media screen and (max-width : 701px) {
+   .VideoPartDiv #obs_div{
+		position: relative;
+		width:250px;
+		top:0px;
+		right:0px;
+		margin-top:0px;
+
+	}
+	.VideoPartDiv #cadre_v{
+		width: 100%;
+	}
+	#v0{
+	max-height:100vh;
+	max-width:100vw;
+	}
+
+}
+		.point {
+			position: absolute;
+			width: 6px;
+			height: 6px;
+			background-color: red;
+			border-radius: 50%;
+			cursor: crosshair;
+			
+			margin:0px !important;
+			padding:0px !important;
+			z-index:2000;
+			  pointer-events: none;
+
+		}
+
+		.segment {
+			position: absolute;
+			border: 1px solid black;
+			cursor: crosshair;
+			margin:0px !important;
+			padding:0px !important;
+			z-index:2000;
+			  pointer-events: none;
+
+		}
+		
+
 
 
 
@@ -171,23 +224,16 @@
 
 }
 
-#v0{
-	width:100%; 
-	object-fit: contain;  
-	height: 100%;
-	margin:0px;
-	left:0px;
-	top:0px;
-	padding:0px;
-	max-height:90vh;
-	max-width:90vh;
 
+
+
+
+
+
+
+.obs_color_over{
+  background-color: rgb(100, 255, 255) !important;
 }
-
-
-
-
-
 
 
 
@@ -246,7 +292,6 @@ button[disabled]{
 
 
 body{
-	min-width:1100px;
 }
 
 
