--- a/NewMeca.css
+++ b/NewMeca.css
@@ -146,7 +146,7 @@
 	width:250px;
 	top:310px;
 	right:10px;
-	overflow: auto;
+	.overflow: auto;
 
 }
 .VideoPartDiv #cadre_v{
@@ -297,7 +297,7 @@ button[disabled]{
 
 
 body{
-	  overflow: auto;
+	  .overflow: auto;
 }
 
 
