--- a/NewMeca.css
+++ b/NewMeca.css
@@ -9,15 +9,44 @@
 
 
 /* HEADER DEBUT */
+
+.header 
+{
+	display:flex;
+	.transition: height 0.5s;
+	height:200px;
+	position:fixed;
+	background-color:white;
+	z-index:10000;
+	width:100%;
+}
+
+
 .header img
 {
 	float:left;
+	height:100%;
 }
-.header p
+.header div
 {
-	font-size:30px;
-}
+  font-family: Arial, Helvetica, sans-serif;
 
+	line-height: 75%;
+	display:flex; 
+	flex-direction:column;
+	align-items:center; 
+	padding:0 0px;
+	font-size:30px;
+	justify-content:center;
+}
+.header div small
+{
+	line-height: 50%;
+
+  font-family: "Lucida Console", "Courier New", monospace;
+
+	font-size:16px;
+}
 /* HEADER FIN */
 
 
@@ -27,6 +56,8 @@
 	margin-top:50px;
 	margin-bottom:10px;
 	font-size:23px;
+	
+	margin-top:205px;
 }
 /* ChoixVideoEntete FIN */
 
@@ -135,8 +166,9 @@
 
 
 #dialog-message{
-	z-index:3000;
+	z-index:3000 !important;
 }
+.ui-dialog { z-index:3000 !important;}
 
 
 
@@ -298,6 +330,7 @@ button[disabled]{
 
 body{
 	  .overflow: auto;
+
 }
 
 
